k8s/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker/docker-compose-k8s.yml convert
    kompose.version: 1.21.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: celery-worker
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: celery-worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ../docker/docker-compose-k8s.yml convert
        kompose.version: 1.21.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: celery-worker
    spec:
      containers:
      - command:
        - /var/www/celus/start_celery.sh
        image: registry.gitlab.com/big-dig-data/celus/celus-django:v0.0.0
        imagePullPolicy: ""
        name: celus-celery-worker
        resources: {}
      imagePullSecrets:
      - name: gitlab
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
