k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker/docker-compose-k8s.yml convert
    kompose.version: 1.21.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: celus-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ../docker/docker-compose-k8s.yml convert
        kompose.version: 1.21.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
      - image: redis
        imagePullPolicy: ""
        name: celus-redis
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
