k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker/docker-compose-k8s.yml convert
    kompose.version: 1.21.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ../docker/docker-compose-k8s.yml convert
        kompose.version: 1.21.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
      - command:
        - /var/www/celus/entrypoint-web.sh
        image: registry.gitlab.com/big-dig-data/celus/celus-django:v0.0.0
        imagePullPolicy: Always
        name: celus-django
        ports:
        - containerPort: 8000
        resources: {}
      imagePullSecrets:
      - name: gitlab
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
